# piqp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  piqpConfig.cmake.in  pyproject.toml  setup.py
.github/workflows/: docs-gh-pages.yml  matlab.yml  octave.yml  tests.yml  wheels.yml
benchmarks/: CMakeLists.txt
benchmarks/data/: chain_mass_sqp.mat  robot_arm_sqp.mat
benchmarks/src/: chain_mass_sqp_benchmark.cpp  dense_cholesky_factorization_benchmark.cpp  dense_sparse_solver_benchmark.cpp  sqp_benchmarks.cpp
ci/: build_install_blasfeo.sh  cibuildwheel_matrix.py  cibw_before_all_linux.sh  cibw_before_all_macos_arm64.sh  cibw_before_all_macos_x86_64.sh  cibw_before_all_windows.sh  download_blasfeo.sh  install_all_deps_linux.sh  install_all_deps_macos.sh  install_all_deps_windows.sh  install_eigen.sh
ci/shared/: install_eigen.sh
cmake/: FindMatio.cmake  FindMatlab.cmake  FindOctave.cmake  Findblasfeo.cmake
docs/: Gemfile  LICENSE  _config.yml  citing.md  index.md
docs/_common/: building_from_source_deps.md  problem_data_intro.md  problem_formulation.md  status_code_table.md
docs/_includes/: head_custom.html  nav.html  nav_footer_custom.html
docs/_includes/components/: site_nav.html
docs/_pages/: api.md  citing.md  examples.md  interfaces.md  multistage.md
docs/_pages/api/: result.md  settings.md
docs/_pages/examples/: scenario_example.md
docs/_pages/interfaces/: c_cpp.md  cvxpy.md  matlab.md  python.md  r.md
docs/_plugins/: root_include.rb
docs/_sass/color_schemes/: piqp.scss
docs/_sass/custom/: custom.scss
docs/assets/: robust_scenario_mpc.ipynb
docs/interfaces/: index.md  result.md  settings.md
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt  c_dense_example.c  c_sparse_example.c
examples/cpp/: CMakeLists.txt  cpp_dense_example.cpp  cpp_sparse_example.cpp
examples/python/: python_dense_example.py  python_sparse_example.py
include/piqp/: common.hpp  data.hpp  fwd.hpp  kkt.hpp  kkt_all_eliminated.hpp  kkt_condensed.hpp  kkt_eq_and_ineq_eliminated.hpp  kkt_eq_eliminated.hpp  kkt_full.hpp  kkt_fwd.hpp  kkt_ineq_eliminated.hpp  kkt_solver_base.hpp  kkt_system.hpp  ldlt.hpp  model.hpp  ordering.hpp  piqp.hpp  random_utils.hpp  results.hpp  settings.hpp  solver.hpp  solver.tpp  timer.hpp  typedefs.hpp  utils.hpp  variables.hpp  workspace.hpp
interfaces/c/: CMakeLists.txt
interfaces/c/include/: piqp.h  piqp_typedef.h
interfaces/c/src/: piqp.cpp
interfaces/c/tests/: CMakeLists.txt
interfaces/c/tests/src/: c_interface_test.cpp
interfaces/matlab/: CMakeLists.txt  install_piqp.m  make_piqp.m  piqp.m  piqp_instruction_set_mex.cpp  piqp_mex.cpp  runtest_piqp.m
interfaces/matlab/cmake/: FindMATLAB.cmake
interfaces/matlab/tests/: simple_tests.m
interfaces/octave/: CMakeLists.txt  make_piqp.m  package_piqp.m  piqp.m  piqp_instruction_set_oct.cpp  piqp_oct.cpp
interfaces/octave/package/: CITATION  COPYING  DESCRIPTION  pre_install.m
interfaces/python/: CMakeLists.txt
interfaces/python/piqp/: __init__.py  __init__.pyi
interfaces/python/src/: instruction_set.cpp  piqp_python.cpp
interfaces/python/tests/: test_basic.py
src/: solver.cpp  typedefs.cpp
src/dense/: data.cpp  kkt.cpp  ldlt_no_pivot.cpp  preconditioner.cpp
src/sparse/: blocksparse_stage_kkt.cpp  data.cpp  kkt.cpp  ldlt.cpp  multistage_kkt.cpp  ordering.cpp  preconditioner.cpp
tests/: CMakeLists.txt
tests/data/: chain_mass_sqp.mat  robot_arm_sqp.mat  robot_arm_sqp_constr_perm.mat  robot_arm_sqp_no_global.mat  scenario_mpc.mat  scenario_mpc_small.mat  small_dense.mat  small_sparse_dual_inf.mat
tests/data/maros_meszaros/: AUG2D.mat  AUG2DC.mat  AUG2DCQP.mat  AUG2DQP.mat  AUG3D.mat  AUG3DC.mat  AUG3DCQP.mat  AUG3DQP.mat  BOYD1.mat  BOYD2.mat  CONT-050.mat  CONT-100.mat  CONT-101.mat  CONT-200.mat  CONT-201.mat  CONT-300.mat  CVXQP1_L.mat  CVXQP1_M.mat  CVXQP1_S.mat  CVXQP2_L.mat  CVXQP2_M.mat  CVXQP2_S.mat  CVXQP3_L.mat  CVXQP3_M.mat  CVXQP3_S.mat  DPKLO1.mat  DTOC3.mat  DUAL1.mat  DUAL2.mat  DUAL3.mat  DUAL4.mat  DUALC1.mat  DUALC2.mat  DUALC5.mat  DUALC8.mat  GENHS28.mat  GOULDQP2.mat  GOULDQP3.mat  HS118.mat  HS21.mat  (+99 more)
tests/data/netlib/data/: 25fv47.mat  80bau3b.mat  adlittle.mat  afiro.mat  agg.mat  agg2.mat  agg3.mat  bandm.mat  beaconfd.mat  blend.mat  bnl1.mat  bnl2.mat  boeing1.mat  boeing2.mat  bore3d.mat  brandy.mat  capri.mat  cycle.mat  czprob.mat  d2q06c.mat  d6cube.mat  degen2.mat  degen3.mat  dfl001.mat  e226.mat  etamacro.mat  fffff800.mat  finnis.mat  fit1d.mat  fit1p.mat  fit2d.mat  fit2p.mat  forplan.mat  ganges.mat  gfrd-pnc.mat  greenbea.mat  greenbeb.mat  grow15.mat  grow22.mat  grow7.mat  (+54 more)
tests/data/netlib/infeas/: bgdbg1.mat  bgetam.mat  bgindy.mat  bgprtr.mat  box1.mat  ceria3d.mat  chemcom.mat  cplex1.mat  cplex2.mat  ex72a.mat  ex73a.mat  forest6.mat  galenet.mat  gosh.mat  gran.mat  greenbea.mat  itest2.mat  itest6.mat  klein1.mat  klein2.mat  klein3.mat  mondou2.mat  pang.mat  pilot4i.mat  qual.mat  reactor.mat  refinery.mat  vol1.mat  woodinfe.mat
tests/include/: utils.hpp
tests/lsan/: suppressions.txt
tests/maros_meszaros_data/: AUG2DCQP.mat  AUG3D.mat  BOYD1.mat  CONT-100.mat  CONT-200.mat  CONT-201.mat  CONT-300.mat  CVXQP2_L.mat  DPKLO1.mat  DTOC3.mat  DUAL2.mat  HS268.mat  HS35MOD.mat  HUES-MOD.mat  LASER.mat  LISWET12.mat  LISWET6.mat  LISWET7.mat  LOTSCHD.mat  PRIMAL3.mat  PRIMAL4.mat  PRIMALC1.mat  PRIMALC5.mat  Q25FV47.mat  QAFIRO.mat  QBANDM.mat  QCAPRI.mat  QFFFFF80.mat  QGFRDXPN.mat  QPCSTAIR.mat  QPILOTNO.mat  QPTEST.mat  QSCAGR25.mat  QSCFXM1.mat  QSCFXM2.mat  QSCFXM3.mat  QSCORPIO.mat  QSCTAP2.mat  QSCTAP3.mat  QSEBA.mat  (+11 more)
tests/src/: io_utils_test.cpp  kkt_condensed_test.cpp  kkt_test.cpp  ldlt_test.cpp  ordering_test.cpp  preconditioner_test.cpp  solver_test.cpp  sparse_utils_test.cpp
tests/src/dense/: kkt_test.cpp  ldlt_test.cpp  maros_meszaros_tests.cpp  solver_test.cpp
tests/src/sparse/: blocksparse_stage_kkt_test.cpp  kkt_test.cpp  ldlt_test.cpp  maros_meszaros_tests.cpp  multistage_kkt_test.cpp  netlib_lp_tests.cpp  solver_test.cpp  utils_test.cpp
(+73 files in other folders)
