[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
files = "setup.py"
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["interfaces/python/tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/interfaces/python/tests"
test-extras = ["test"]
# scipy has no prebuild wheels for pypy and 32bit architectures
test-skip = ["*universal2:arm64", "pp*", "*-*linux_i686", "*-musllinux*", "*-win32"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"