[project]
name = "piqp"
version = "0.5.0"
readme = "README.md"
description = "A Proximal Interior Point Quadratic Programming solver"
requires-python = ">=3.7"
license = 'BSD-2-Clause'
dependencies = ["numpy", "scipy"]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build-python/{wheel_tag}"
wheel.packages = ["interfaces/python/piqp"]

[tool.scikit-build.cmake.define]
BUILD_WITH_TEMPLATE_INSTANTIATION = "OFF"
BUILD_PYTHON_INTERFACE = "ON"
BUILD_C_INTERFACE = "OFF"
BUILD_TESTS = "OFF"
BUILD_EXAMPLES = "OFF"
BUILD_BENCHMARKS = "OFF"
CMAKE_POSITION_INDEPENDENT_CODE = true
PIQP_VERSION_INFO = "0.5.0"
# don't install the c++ headers, shared libs, and CMake config files
ENABLE_INSTALL = "OFF"

[tool.isort]
profile = "black"

[tool.mypy]
files = "setup.py"
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["interfaces/python/tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/interfaces/python/tests"
test-extras = ["test"]
# scipy has no prebuild wheels for pypy and 32bit architectures
test-skip = [
    "*universal2:arm64",
    "pp*",
    "*-*linux_i686",
    "*-musllinux*",
    "*-win32",
]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
